# lemini-pub

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .impeccable.md  Dockerfile  Dockerfile.sync  LICENSE  README.md  cloudbuild.rollout.yaml  cloudbuild.sync.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
.github/workflows/: deploy-api.yml
apps/api/: main.py
apps/web/: next.config.ts  package.json  tsconfig.json  wrangler.toml
apps/worker/: README.md  run.py
docs/: index.html  portfolio.html
scripts/: append_admrul_bulk.py  append_admrul_missing.py  append_voluntary_code_test.py  ask.py  backfill_promulgation_no.py  backup-prod-db.sh  bench_precedent_pipeline.py  collect_ftc_standard_terms.py  deploy-cloud-run-notraffic.sh  deploy-cloud-run.sh  deploy-sync.sh  embed_only.py  embed_parallel.py  entrypoint.sh  eval_dataset.json  eval_embedding.py  eval_no_expand.py  eval_rag.py  eval_rag_with_admrul.py  eval_results.json  extract_mermaid.mjs  fix_voluntary_titles.py  generate_questions.py  hwp_to_pdf_bulk.py  process_manual_uploads.py  sample_admrul_by_agencies.py  setup-rollout-automation.sh  slack_legal_qa_export.py  sync-artifacts.sh  sync_e2e_offline.py  teardown-demo.sh  test_full_review_survey.py  test_ingest_append.py  test_keywords.py  test_precedent_e6556.py  test_precedent_hit_rate.py  upload-artifacts-gcs.sh  verify_manual_guide_urls.py  voluntary_bulk_orchestrator.py  voluntary_pdf_to_md.py  (+1 more)
scripts/eval/: collect_answers.py  collect_questions.py  common.py  compare_runs_text.py  eval.py  (+7 more)
(+24 files in other folders)
